Co-authored-by: lanle@hotmail.nl <lanle@hotmail.nl>

--- a/assignments.html
+++ b/assignments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="content source" content ="http://www.cs.uu.nl/education/vak/INFOB2WT">
+    <meta name="content source" content="http://www.cs.uu.nl/education/vak/INFOB2WT">
     <title>Webtechnology - INFOB2WT</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 </head>
@@ -41,22 +41,24 @@
         </div>
     </header>
 
-    <article>        
-        <h2>Assignments & labs</h2>
-        <section>
-                <h3>Assignment 1</h3>
-                <p>
-                </p>
-                <h3>Assignment 2</h3>
-                <p>
-                </p>
-                <h3>Assignment 3</h3>
-                <p>
-                </p>
+    <article class="content">
+        <div class="title__h2">
+            <h2>Assignments & labs</h2>
+        </div>
+        <section class="content__para">
+            <h3>Assignment 1</h3>
+            <p>
+            </p>
+            <h3>Assignment 2</h3>
+            <p>
+            </p>
+            <h3>Assignment 3</h3>
+            <p>
+            </p>
         </section>
     </article>
 
-    <footer class="footer">       
+    <footer class="footer">
         <div class="footer__inner">Utrecht University 2020</div>
     </footer>
 
