--- a/schedule.html
+++ b/schedule.html
@@ -42,68 +42,72 @@
 
 
     <article class="content">
-        <h2>Course Content and Schedule</h2>
-        <p> This page contains all study materials and schedule for the course:</p>
-        <ul>
-          <li> <a href="#sources">External Sources </a></li>
-          <li> <a href="#lectures">Lecture Slides </a></li>
-          <li> <a href="#schedule">Course Schedule</a></li>
-        </ul>
-          <section class="content__para">
-              <h3> General Information Sources </h3>
-              <a name="sources"></a>
-                  <a href="https://www.w3schools.com/">W3Schools</a>
-                      <br>
-                  <p>
-                    A very useful website that provides you with quick and to-the-point
-                    reference material on virtually any concept in the course.
-                    Has interactive examples.
-                  </p>
-                      <br>
-                  <a href="https://developers.google.com/web/tools/chrome-devtools/">Chrome DevTools</a>
-                      <br>
-                  <p>
-                    Tutorial from Google on how to use Chrome Developer Tool
-                  </p>
-                      <br>
-                  <a href="https://developer.mozilla.org/en-US/docs/Tools">Firefox Developer Tools</a>
-                      <br>
-                  <p>
-                    Tutorial from Mozilla on how to use Firefox Developer Tool
-                  </p>
-          </section>
+        <div class="title__h2">
+            <h2>Course Content and Schedule</h2>
+        </div>
 
-          <section class="content__para">
-              <h3> Lecture Materials </h3>
-              <a name="lectures"></a>
-                  <h4> Lecture 1 </h4>
-                      <a href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/"> Brief History of the Internet</a>
-          </section>
+        <section class="content__intro">
+            <p> This page contains all study materials and schedule for the course:</p>
+            <ul>
+                <li> <a href="#sources">External Sources </a></li>
+                <li> <a href="#lectures">Lecture Slides </a></li>
+                <li> <a href="#schedule">Course Schedule</a></li>
+            </ul>
+        </section>
 
-          <section class="content__para">
-            <h3> Course Schedule</h3>
-            <a name="schedule"></a>
-                  <table>
+        <section class="content__para">
+            <h3> General Information Sources </h3>
+
+            <p><a href="https://www.w3schools.com/">W3Schools</a></p>
+            <p>
+                A very useful website that provides you with quick and to-the-point
+                reference material on virtually any concept in the course.
+                Has interactive examples.
+            </p>
+
+            <p><a href="https://developers.google.com/web/tools/chrome-devtools/">Chrome DevTools</a></p>
+
+            <p>
+                Tutorial from Google on how to use Chrome Developer Tool
+            </p>
+
+            <p><a href="https://developer.mozilla.org/en-US/docs/Tools">Firefox Developer Tools</a></p>
+            <p>
+                Tutorial from Mozilla on how to use Firefox Developer Tool
+            </p>
+        </section>
+
+        <section class="content__para">
+            <h3> Lecture Materials </h3>
+            <a name="lectures"></a>
+            <h4> Lecture 1 </h4>
+            <a href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/"> Brief History
+                of the Internet</a>
+        </section>
+
+        <section class="content__para">
+            <h3>Course Schedule</h3>
+                <table>
                     <tr>
-                      <th>Date</th>
-                      <th>Lecture</th>
-                      <th>Description</th>
-                      <th>Tasks</th>
+                        <th>Date</th>
+                        <th>Lecture</th>
+                        <th>Description</th>
+                        <th>Tasks</th>
                     </tr>
                     <tr>
-                      <td>05/02</td>
-                      <td>L01</td>
-                      <td>Course info, Web history, Internet protocols</td>
-                      <td>Select groups</td>
+                        <td>05/02</td>
+                        <td>L01</td>
+                        <td>Course info, Web history, Internet protocols</td>
+                        <td>Select groups</td>
                     </tr>
                     <tr>
-                      <td>07/02</td>
-                      <td>L02</td>
-                      <td>HTML, Standards, Accessibility</td>
-                      <td>HW1 is published</td>
+                        <td>07/02</td>
+                        <td>L02</td>
+                        <td>HTML, Standards, Accessibility</td>
+                        <td>HW1 is published</td>
                     </tr>
-                  </table>
-      </section>
+                </table>
+        </section>
     </article>
 </body>
 
