--- a/schedule.html
+++ b/schedule.html
@@ -56,8 +56,7 @@
         </section>
 
         <section class="content__para">
-            <h3> General Information Sources </h3>
-
+            <h3 id="sources"> General Information Sources </h3>
             <p><a href="https://www.w3schools.com/">W3Schools</a></p>
             <p>
                 A very useful website that provides you with quick and to-the-point
@@ -78,15 +77,14 @@
         </section>
 
         <section class="content__para">
-            <h3> Lecture Materials </h3>
-            <a name="lectures"></a>
+            <h3 id="lectures"> Lecture Materials </h3>
             <h4> Lecture 1 </h4>
             <a href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/"> Brief History
                 of the Internet</a>
         </section>
 
         <section class="content__para">
-            <h3>Course Schedule</h3>
+            <h3 id="schedule">Course Schedule</h3>
                 <table>
                     <tr>
                         <th>Date</th>
