minor validation and requirement changes

--- a/schedule.html
+++ b/schedule.html
@@ -13,9 +13,7 @@
         <div class="header__inner">
             <div class="header__inner--top">
                 <img class="header__logo--left" src="./images/1200px-Utrecht_University_logo.svg.png" alt="UU_logo" />
-                <h2>
-                    <div class="header__title">Webtechnology</div>
-                </h2>
+                <h2 class="header__title">Webtechnology</h2>
             </div>
 
             <nav class="header__inner--bottom">
@@ -87,26 +85,26 @@
 
         <section class="content__para">
             <h3>Course Schedule</h3>
-                <table>
-                    <tr>
-                        <th>Date</th>
-                        <th>Lecture</th>
-                        <th>Description</th>
-                        <th>Tasks</th>
-                    </tr>
-                    <tr>
-                        <td>05/02</td>
-                        <td>L01</td>
-                        <td>Course info, Web history, Internet protocols</td>
-                        <td>Select groups</td>
-                    </tr>
-                    <tr>
-                        <td>07/02</td>
-                        <td>L02</td>
-                        <td>HTML, Standards, Accessibility</td>
-                        <td>HW1 is published</td>
-                    </tr>
-                </table>
+            <table>
+                <tr>
+                    <th>Date</th>
+                    <th>Lecture</th>
+                    <th>Description</th>
+                    <th>Tasks</th>
+                </tr>
+                <tr>
+                    <td>05/02</td>
+                    <td>L01</td>
+                    <td>Course info, Web history, Internet protocols</td>
+                    <td>Select groups</td>
+                </tr>
+                <tr>
+                    <td>07/02</td>
+                    <td>L02</td>
+                    <td>HTML, Standards, Accessibility</td>
+                    <td>HW1 is published</td>
+                </tr>
+            </table>
         </section>
     </article>
 </body>
