--- a/assignments.html
+++ b/assignments.html
@@ -14,9 +14,7 @@
         <div class="header__inner">
             <div class="header__inner--top">
                 <img class="header__logo--left" src="./images/1200px-Utrecht_University_logo.svg.png" alt="UU_logo" />
-                <h2>
-                    <a class="header__title">Webtechnology</a>
-                </h2>
+                <h2 class="header__title">Webtechnology</h2>
             </div>
 
             <nav class="header__inner--bottom">
