--- a/assignments.html
+++ b/assignments.html
@@ -59,7 +59,9 @@
     </article>
 
     <footer class="footer">
-        <div class="footer__inner">Utrecht University 2020</div>
+        <div class="footer__inner">
+            http://www.cs.uu.nl/education/vak/INFOB2WT | Utrecht University 2020
+        </div>
     </footer>
 
 </body>
