--- a/schedule.html
+++ b/schedule.html
@@ -110,6 +110,10 @@
             </table>
         </section>
     </article>
+<footer class="footer">
+    <div class="footer__inner">
+        https://uu.blackboard.com/bbcswebdav/pid-3398422-dt-content-rid-32821633_2/courses/BETA-2019-3-INFOB2WT-V/syllabus.pdf | INFOB2WT syllabus
+    </div>
+</footer>
 </body>
-
 </html>
