edit footer in home and announcement

--- a/grading.html
+++ b/grading.html
@@ -83,7 +83,7 @@
 
     <footer class="footer">
         <div class="footer__inner">
-            http://www.cs.uu.nl/education/vak/INFOB2WT | Utrecht University 2020
+            <a href="http://www.cs.uu.nl/education/vak/INFOB2WT">http://www.cs.uu.nl/education/vak/INFOB2WT</a> | Utrecht University 2020
         </div>
     </footer>
 
