--- a/home.html
+++ b/home.html
@@ -250,6 +250,14 @@
             </ul>
         </section>
     </article>
+
+    <footer class="footer">
+        <div class="footer__inner">
+            Disclaimer: All page content is referenced from the course syllabus of Webtechnology (<a
+                href="http://www.cs.uu.nl/education/vak/INFOB2WT">INFOB2WT</a>)
+            | Utrecht University 2020
+        </div>
+    </footer>
 </body>
 
 </html>
