--- a/schedule.html
+++ b/schedule.html
@@ -110,10 +110,12 @@
             </table>
         </section>
     </article>
-<footer class="footer">
-    <div class="footer__inner">
-        https://uu.blackboard.com/bbcswebdav/pid-3398422-dt-content-rid-32821633_2/courses/BETA-2019-3-INFOB2WT-V/syllabus.pdf | INFOB2WT syllabus
-    </div>
-</footer>
+    <footer class="footer">
+        <div class="footer__inner">
+            Disclaimer: All page content is referenced from the course syllabus of Webtechnology (<a
+                href="http://www.cs.uu.nl/education/vak/INFOB2WT">INFOB2WT</a>)
+            | Utrecht University 2020
+        </div>
+    </footer>
 </body>
 </html>
